Fix horizontal scroll on dev_pages

--- a/products/static/products/css/publishers/atari.css
+++ b/products/static/products/css/publishers/atari.css
@@ -10,7 +10,7 @@
 @media (min-width: 1400px) {
     .title-image-container {
         height: 390px;
-        margin-left: 17% !important;
+        margin-left: 16% !important;
     }
 
     .dev-page-title-image {
